--- a/contact-us.html
+++ b/contact-us.html
@@ -150,7 +150,7 @@
         });
     
         async function submitFormToServer(formData) {
-            const response = await fetch('https://meomics.onrender.com/add', {
+            const response = await fetch('https://meomics-back-end.onrender.com/add', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
