--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         </div>
         <div class="btn">
-            <button class="btn1">Reach Out</button>
+           <a href="/contact-us.html"><button class="btn1">Reach Out</button></a> 
         </div>
       
         <img class="link-icon" alt="" src="../public/link.svg" />
