--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>meOmics: Personalized Medicine for Mental Health</title>
+    <title>meOmics: Personalised Medicine for Mental Health</title>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZDEKBQ3RLC"></script>
 <script>
