--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/public/meologo.png" type="image/x-icon" />
-    <title>meOmics: Personalized Medicine for Mental Health</title>
+    <title>meOmics: Personalised Medicine for Mental Health</title>
     <meta
       name="description"
       content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses."
