--- a/schizophrenia.html
+++ b/schizophrenia.html
@@ -115,7 +115,7 @@
         <section class="container3">
 
             <div class="image">
-                <img src="/public/schizo 3.svg" alt="positve message about mental health">
+                <img src="/public/lab.svg" alt="positve message about mental health">
             </div>
             <div class="content">
                 <img src="/public/3.svg" alt="img of number 1" class="numbers">
