--- a/Investing.html
+++ b/Investing.html
@@ -72,9 +72,7 @@
         <section class="container1">
             <h1>MeOmics is a High Impact Investment Opportunity</h1>
             <p> <i>MeOmics is a high-risk, early-stage business. If you are considering investing, you should understand
-                    that your capital is unprotected if something goes wrong. Do not invest unless you are prepared to
-                    lose
-                    all of the money you invest.</i></p>
+                    that your capital is unprotected if something goes wrong.Ensure you are willing to risk your entire investment before committing funds.</i></p>
         </section>
         <section class="container2">
             <h2>MeOmics Pre-Seed Pitch Deck</h2>
