--- a/Investing.html
+++ b/Investing.html
@@ -72,7 +72,7 @@
         <section class="container1">
             <h1>MeOmics is a High Impact Investment Opportunity</h1>
             <p> <i>MeOmics is a high-risk, early-stage business. If you are considering investing, you should understand
-                    that your capital is unprotected if something goes wrong.Ensure you are willing to risk your entire investment before committing funds.</i></p>
+                    that your capital is unprotected if something goes wrong.Only invest if you are comfortable with the possibility of losing your entire investment..</i></p>
         </section>
         <section class="container2">
             <h2>MeOmics Pre-Seed Pitch Deck</h2>
