--- a/contact-us.html
+++ b/contact-us.html
@@ -7,14 +7,14 @@
     <link rel="icon" href="/public/meologo.png" type="image/x-icon">
     <link rel="stylesheet" href="/public/css/contact.css">
     <title>meOmics: Personalised Medicine for Mental Health</title>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZDEKBQ3RLC"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3L69MJ3EG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-ZDEKBQ3RLC');
+  gtag('config', 'G-F3L69MJ3EG');
 </script>
 
 
