--- a/privacy.html
+++ b/privacy.html
@@ -13,6 +13,15 @@
       name="keywords"
       content="meOmics, precision medicine, mental health, psychiatry, schizophrenia, bipolar disorder, personalized treatment, patient data, cellular assays, Cardiff, Wales"
     />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3L69MJ3EG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F3L69MJ3EG');
+</script>
     <!-- Social Media Links -->
     <meta
       property="og:title"
