--- a/team.html
+++ b/team.html
@@ -8,6 +8,15 @@
     <title>meOmics: Personalised Medicine for Mental Health</title>
     <meta name="description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
     <meta name="keywords" content="meOmics, precision medicine, mental health, psychiatry, schizophrenia, bipolar disorder, personalized treatment, patient data, cellular assays, Cardiff, Wales">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3L69MJ3EG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F3L69MJ3EG');
+</script>
     <!-- Social Media Links -->
     <meta property="og:title" content="meOmics: Personalized Medicine for Mental Health">
     <meta property="og:description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
