--- a/Investing.html
+++ b/Investing.html
@@ -98,10 +98,10 @@
                 <video src="https://vimeo.com/782453134/7557deace6"></video>
             </div>
             <h2> MeOmics Pre-Seed Fundraise Pitch </h2>
-            <p>MeOmics is seeking our pre-seed investment round, targeting a £1m raise for 20% equity. This EIS
-                Advaninvestment (with £100k of SEIS) is planned to close in Q1 2024. Active conversations are
-                progressing with a potential lead investor and other potential investors interested in joining the
-                company. If you would like to receive a copy of the latest pitch deck and (for serious investors) obtain
+            <p>MeOmics is seeking our pre-seed investment round, targeting a £1m raise. This EIS
+                Advaninvestment is planned to close in Q3 2024. We have secured a lead investor
+                and we are now around 75% committed towards our target raise.
+                If you would like to receive a copy of the latest pitch deck and (for serious investors) obtain
                 access to our data room, then please use the contact form below.
 
                 We look forward to hearing from you.</p>
