--- a/Investing.html
+++ b/Investing.html
@@ -99,13 +99,13 @@
             </div>
             <h2> MeOmics Pre-Seed Fundraise Pitch </h2>
             <p>MeOmics is seeking our pre-seed investment round, targeting a £1m raise. This EIS
-                Advaninvestment is planned to close in Q3 2024. We have secured a lead investor
+                Advanced Assured investment is planned to close in Q3 2024. We have secured a lead investor
                 and we are now around 75% committed towards our target raise.
                 If you would like to receive a copy of the latest pitch deck and (for serious investors) obtain
                 access to our data room, then please use the contact form below.
 
                 We look forward to hearing from you.</p>
-            <p>If you're interested in investing, would like to learn more, please reach out to Alasdair Pettigrew,
+            <p>If you're interested in investing and would like to learn more, please reach out to Alasdair Pettigrew,
                 either through this contact form or directly by e-mail or phone (details shown below). We'd love to hear
                 from you!</p><button><a href="/contact-us.html">Contact Us</a></button>
         </section>
