--- a/Investing.html
+++ b/Investing.html
@@ -86,7 +86,7 @@
         <section class="container2">
             <h2>MeOmics Pre-Seed Pitch Deck</h2>
             <div>
-                <iframe src="/public/MeOmics - Brief Pre-Seed Investment Deck - April 24.pdf" frameborder="0"
+                <iframe src="/public/MeOmics - Brief Pre-Seed Investment Deck - July 24.pdf" frameborder="0"
                     class="pitchdeck"></iframe>
             </div>
         </section>
@@ -94,8 +94,8 @@
 
 
         <section class="container3">
-            <div>
-                <video src="https://vimeo.com/782453134/7557deace6"></video>
+            <div class="video-placeholder">
+                <iframe src="https://player.vimeo.com/video/995447678" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
             <h2> MeOmics Pre-Seed Fundraise Pitch </h2>
             <p>MeOmics is seeking our pre-seed investment round, targeting a £1m raise. This EIS
