--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </script>
     <link rel="icon" href="/public/meologo.png" type="image/x-icon">
 
-    <meta name="description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
-    <meta name="keywords" content="meOmics, precision medicine, mental health, psychiatry, schizophrenia, bipolar disorder, personalized treatment, patient data, cellular assays, Cardiff, Wales">
+    <meta name="description" content="MeOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
+    <meta name="keywords" content="MeOmics, precision medicine, mental health, psychiatry, schizophrenia, bipolar disorder, personalized treatment, patient data, cellular assays, Cardiff, Wales">
     <!-- Social Media Links -->
-    <meta property="og:title" content="meOmics: Personalized Medicine for Mental Health">
-    <meta property="og:description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
+    <meta property="og:title" content="MeOmics: Personalized Medicine for Mental Health">
+    <meta property="og:description" content="MeOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
    
     <meta property="og:url" content="https://twitter.com/MeOmics_Pre_Med">
   
@@ -37,7 +37,7 @@
       <meta property="og:image:height" content="630">
       <meta property="og:url" content="https://www.linkedin.com/company/meomics-technology/">
       <meta property="og:title" content="meOmics: Personalized Medicine for Mental Health">
-      <meta property="og:description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
+      <meta property="og:description" content="MeOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
       <meta property="og:article:author" content="https://www.linkedin.com/company/meomics-technology/">
     <link rel="stylesheet" href="/public/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -95,18 +95,18 @@
         <div class="meomics-is-a">
             <p>
 
-                Meomics is a groundbreaking biotech startup poised to revolutionize
-                mental healthcare. By harnessing the power of stem cells, we're
-                building intricate "brains on a chip" that hold the key to unlocking
-                the future of personalized medicine. This innovative technology will
-                allow us to peer into the very foundation of mental health
+                MeOmics is a groundbreaking biotech startup poised to revolutionise
+                mental healthcare. By harnessing the power of stem cells, we are
+                building intricate "brains on a chip" that become "patient populations on a plate" 
+                that hold the key to unlocking the future of personalised medicine. This innovative 
+                technology will allow us to peer into the very foundation of mental health
                 conditions, like schizophrenia, at a cellular level.
 
 
             </p>
             <p>This deeper understanding paves the way for developing targeted treatments,
-                tailored to the unique needs of each patient. With Meomics, you're
-                not just joining a company, you're joining a movement to rewrite the
+                tailored to the unique needs of each patient. By supporting Meomics, you are
+                not just supporting a company, you are joining a movement to rewrite the
                 narrative of mental health – a story filled with hope, empowerment,
                 and the potential for groundbreaking breakthroughs.
             </p>
@@ -143,9 +143,9 @@
 
                 <h3> Collaborate with us</h3>
                 <p class="unlocking-the-future">
-                    Join in to innovate with us and to
-                    find new treatments for patients
-                    with no current cures&#46;
+                    Please make contact to innovate with us and to
+                    find new treatments for patients with conditions
+                    currently with no cure&#46;
                 </p>
             </div>
         </div>
