--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <link rel="icon" href="/public/meologo.png" type="image/x-icon">
 
     <meta name="description" content="MeOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
-    <meta name="keywords" content="MeOmics, precision medicine, mental health, psychiatry, schizophrenia, bipolar disorder, personalized treatment, patient data, cellular assays, Cardiff, Wales">
+    <meta name="keywords" content="MeOmics, precision medicine, mental health, psychiatry, schizophrenia, bipolar disorder, personalised treatment, patient data, cellular assays, Cardiff, Wales">
     <!-- Social Media Links -->
-    <meta property="og:title" content="MeOmics: Personalized Medicine for Mental Health">
+    <meta property="og:title" content="MeOmics: Personalised Medicine for Mental Health">
     <meta property="og:description" content="MeOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
    
     <meta property="og:url" content="https://twitter.com/MeOmics_Pre_Med">
   
     <meta name="twitter:site" content="@MeOmics_Pre_Med">
     <meta name="twitter:creator" content="@YourTwitterHandle">
-    <meta name="twitter:title" content="meOmics: Personalized Medicine for Mental Health">
-    <meta name="twitter:description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
+    <meta name="twitter:title" content="meOmics: Personalised Medicine for Mental Health">
+    <meta name="twitter:description" content="MeOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
    
       <!-- LinkedIn -->
       <meta property="og:type" content="website">
@@ -36,7 +36,7 @@
       <meta property="og:image:width" content="1200">
       <meta property="og:image:height" content="630">
       <meta property="og:url" content="https://www.linkedin.com/company/meomics-technology/">
-      <meta property="og:title" content="meOmics: Personalized Medicine for Mental Health">
+      <meta property="og:title" content="meOmics: Personalised Medicine for Mental Health">
       <meta property="og:description" content="MeOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
       <meta property="og:article:author" content="https://www.linkedin.com/company/meomics-technology/">
     <link rel="stylesheet" href="/public/css/style.css">
@@ -122,7 +122,7 @@
 
                 <h3> About MeOmics</h3>
                 <p class="unlocking-the-future">
-                    Developing personalized treatments<br> for
+                    Developing personalised treatments<br> for
 
                     patients with Mental health <br>Disorders&#46;
                 </p>
