--- a/schizophrenia.html
+++ b/schizophrenia.html
@@ -16,16 +16,16 @@
   gtag('config', 'G-F3L69MJ3EG');
 </script>
     <meta name="description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
-    <meta name="keywords" content="meOmics, precision medicine, mental health, psychiatry, schizophrenia, bipolar disorder, personalized treatment, patient data, cellular assays, Cardiff, Wales">
+    <meta name="keywords" content="meOmics, precision medicine, mental health, psychiatry, schizophrenia, bipolar disorder, personalised treatment, patient data, cellular assays, Cardiff, Wales">
     <!-- Social Media Links -->
-    <meta property="og:title" content="meOmics: Personalized Medicine for Mental Health">
+    <meta property="og:title" content="meOmics: Personalised Medicine for Mental Health">
     <meta property="og:description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
    
     <meta property="og:url" content="https://twitter.com/MeOmics_Pre_Med">
   
     <meta name="twitter:site" content="@MeOmics_Pre_Med">
     <meta name="twitter:creator" content="@YourTwitterHandle">
-    <meta name="twitter:title" content="meOmics: Personalized Medicine for Mental Health">
+    <meta name="twitter:title" content="meOmics: Personalised Medicine for Mental Health">
     <meta name="twitter:description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
    
       <!-- LinkedIn -->
@@ -35,7 +35,7 @@
       <meta property="og:image:width" content="1200">
       <meta property="og:image:height" content="630">
       <meta property="og:url" content="https://www.linkedin.com/company/meomics-technology/">
-      <meta property="og:title" content="meOmics: Personalized Medicine for Mental Health">
+      <meta property="og:title" content="meOmics: Personalised Medicine for Mental Health">
       <meta property="og:description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
       <meta property="og:article:author" content="https://www.linkedin.com/company/meomics-technology/">
     <link rel="stylesheet" href="/public/css/Schizophrenia.css">
@@ -98,7 +98,7 @@
                     beliefs).
                     Additionally, people with schizophrenia may experience social withdrawal, difficulty concentrating,
                     and
-                    disorganized thinking.</p>
+                    disorganised thinking.</p>
             </div>
         </section>
 
@@ -109,7 +109,7 @@
                 <p>Schizophrenia is typically treated with a combination of medication and therapy. Antipsychotic
                     medications are the mainstay of treatment, helping to manage symptoms like hallucinations and
                     delusions.
-                    Therapy, such as cognitive behavioral therapy (CBT), can equip individuals with coping mechanisms
+                    Therapies, such as cognitive behavioural therapy (CBT), can equip individuals with coping mechanisms
                     and
                     improve social skills. However, finding the right medication and therapy approach can be a process
                     of
@@ -130,26 +130,19 @@
                 <img src="/public/3.svg" alt="img of number 1" class="numbers">
                 <h2>MeOmics: A Personalised
                     Approach to Treatment</h2>
-                <p>MeOmics is transforming the future of schizophrenia treatment by offering a more personalized
-                    approach.
-                    We analyze a patient's unique biology, including:
-                    Cellular activity
-
-                    How their nerve cells respond to stimuli.
-                    Genetics Their genetic makeup to understand potential risk factors.
-                    By integrating this information with a patient's medical history, </p>
+                <p> MeOmics is revolutionizing the future of schizophrenia treatment by providing a more personalised
+                    approach. We analyze each patient's unique biology, focusing on several key areas:
+                <p> Cellular Activity: We examine how an individual's nerve cells respond to various stimuli.
+                <p> Genetics: We study their genetic makeup to identify potential risk factors.
+                    By integrating this information with a patient's medical history, MeOmics can offer
+                    more tailored and effective treatment options.</p>
                 <p> MeOmics aims to predict the most
-                    effective medications for their specific needs. This personalized approach has the potential to:
-
-
-                    Reduce trial-and-error with medication
-                    Finding the right medication faster can lead to quicker symptom relief and improved quality of life.
-                    Minimize side effects: Matching the right medication to a patient's biology can potentially reduce
-                    the
-                    risk of unwanted side effects.
-                    Empower patients: Being actively involved in a personalized treatment plan can lead to a greater
-                    sense
-                    of control and hope for recovery.
+                    effective medications for their specific needs. This personalised approach has the potential to:
+                <p> Reduce trial-and-error with medication: Finding the right medication faster can lead to quicker symptom relief and improved quality of life.
+                <p> Minimize side effects: Matching the right medication to a patient's biology can potentially reduce
+                    the risk of unwanted side effects.
+                <p> Empower patients: Being actively involved in a personalised treatment plan can lead to a greater
+                    sense of control and hope for recovery.
 
                 </p>
             </div>
@@ -160,7 +153,7 @@
                 <img src="/public/4.svg" alt="img of number 1" class="numbers">
                 <h2>Getting Help
                     in the UK</h2>
-                <p>If you or someone you know is experiencing symptoms of schizophrenia, it's important to seek
+                <p>If you or someone you know is experiencing symptoms of schizophrenia, it is important to seek
                     professional
                     help. Here are some resources available in the UK:
                 <h3> Your GP (general practitioner)</h3>
