--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link rel="icon" href="/public/meologo.png" type="image/x-icon">
     <link rel="stylesheet" href="/public/css/contact.css">
-    <title>meOmics: Personalised Medicine for Mental Health</title>
+    <title>MeOmics: Personalised Medicine for Mental Health</title>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-F3L69MJ3EG"></script>
 <script>
@@ -18,17 +18,17 @@
 </script>
 
 
-<meta name="description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
-<meta name="keywords" content="meOmics, precision medicine, mental health, psychiatry, schizophrenia, bipolar disorder, personalized treatment, patient data, cellular assays, Cardiff, Wales">
+<meta name="description" content="MeOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
+<meta name="keywords" content="MeOmics, precision medicine, mental health, psychiatry, schizophrenia, bipolar disorder, personalized treatment, patient data, cellular assays, Cardiff, Wales">
 <!-- Social Media Links -->
-<meta property="og:title" content="meOmics: Personalized Medicine for Mental Health">
+<meta property="og:title" content="MeOmics: Personalized Medicine for Mental Health">
 <meta property="og:description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
 
 <meta property="og:url" content="https://twitter.com/MeOmics_Pre_Med">
 
 <meta name="twitter:site" content="@MeOmics_Pre_Med">
 <meta name="twitter:creator" content="@YourTwitterHandle">
-<meta name="twitter:title" content="meOmics: Personalized Medicine for Mental Health">
+<meta name="twitter:title" content="MeOmics: Personalized Medicine for Mental Health">
 <meta name="twitter:description" content="meOmics is a Welsh biotech startup developing a platform for precision psychiatry. We use patient data and cellular assays to predict treatment response for severe mental illnesses.">
 
   <!-- LinkedIn -->
@@ -80,7 +80,7 @@
 
     </header>
     <main>
-        <h1>Contact-us</h1>
+        <h1>Contact Us</h1>
         <div class="container1">
 
             <div class="container10">
@@ -91,7 +91,7 @@
                 </div>
                 <div class="container3">
                     <img src="/public/phone.svg" alt=" image of phone">
-                    <p>&#43;44 07711 850102</p>
+                    <p>&#43;44 (0)7711 850102</p>
                 </div>
                 <div class="container3">
                     <img src="/public/mail.svg" alt="image of email">
