--- a/science.html
+++ b/science.html
@@ -105,7 +105,7 @@
 
                     innovative <b>Precision Psychiatry Platform</b> for improved drug discovery and prediction of
                     optimal drug
-                    therapies for individual mental health patients..
+                    therapies for individual mental health patients.
                 </p>
             </div>
         </section>
@@ -134,14 +134,14 @@
                     electrophysiological profile to multiple clinical parameters and genetic differences. Together these
                     methodologies will create a tool to predict the optimal drug therapy based upon the cell responses
                     in combination with the patient genotype and clinical data. </p>
-                <p> Currently no such platform exists, and clinicians rely on direct patient clinical assessment and
+                <p> Currently, no such platform exists, and clinicians rely on direct patient clinical assessment and
                     professional judgement to determine therapeutic strategy. MeOmics will work with mental healthcare
-                    providers to scale-up the prototype of our data-biology tool on patient populations with the
-                    objective of demonstrating a capacity to handle more than 500 patient lines and to confirm its
+                    providers to scale up the prototype of our data-biology tool on patient populations with the
+                    objective of demonstrating a capacity to handle more than 500 patient lines and confirming its
                     ability to predict differences in patient treatment responses, with an initial focus on psychotic
                     illnesses.
-                    This will represent a significant up-scaling from current state-of-the-art and aligns with the
-                    commercial need to create a high content product. These data will be analysed by bespoke
+                    This will represent a significant up-scaling from current state-of-the-art for psychiatric disease modelling
+                    and aligns with the commercial need to create a high-content data platform. These data will be analysed by bespoke
                     computational tools to stratify patients based on cell response, genotype and clinical data to
                     improve predictive power. By combining these data sources, the platform will bring personalised
                     medicine to psychiatry.
@@ -156,7 +156,7 @@
                     treatments. This will give access to an additional market for drug discovery and development with
                     big pharmaceutical companies.
 
-                    In summary, MeOmics' immediate objective is to scale-up their existing prototype of the Precision
+                    In summary, MeOmics' immediate objective is to scale up their existing prototype of the Precision
                     Psychiatry Platform, an innovative new service product to improve patient treatment for mental
                     illnesses. The research and development performed will create brand-new diagnostic and pre-clinical
                     screening service products for the mental healthcare market.
@@ -194,7 +194,7 @@
                     the MEA assay capacity to create a high capacity, high throughput MEA workflow based on an
                     established 96-well plate protocol (Biocircuit MEA 96, Axion) integrated via robotics into a unique
                     automated MEA system. This will create an expandable system capable of testing multiple drugs, doses
-                    and combinations in parallel for 100s of patients (see figure below). Genomic, phenotype and MEA
+                    and combinations in parallel for 100s of patients (see figure). Genomic, phenotype and MEA
                     data will be utilised to establish multiparametric markers of patient sub-groups linked to drug
                     responsiveness providing testable hypotheses for the mental healthcare provider.The process will be
                     reiterated initially for up to 200 patients to refine the assay process and data
