--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <p class="unlocking-the-future">
                     Developing personalised treatments<br> for
 
-                    patients with Mental health <br>Disorders&#46;
+                    patients with mental health disorders&#46;
                 </p>
             </div>
             <div class="container1">
