--- a/schizophrenia.html
+++ b/schizophrenia.html
@@ -132,16 +132,16 @@
                     Approach to Treatment</h2>
                 <p> MeOmics is revolutionizing the future of schizophrenia treatment by providing a more personalised
                     approach. We analyze each patient's unique biology, focusing on several key areas:
-                <p> Cellular Activity: We examine how an individual's nerve cells respond to various stimuli.
-                <p> Genetics: We study their genetic makeup to identify potential risk factors.
+                <br> Cellular Activity: We examine how an individual's nerve cells respond to various stimuli.
+                <br> Genetics: We study their genetic makeup to identify potential risk factors.
                     By integrating this information with a patient's medical history, MeOmics can offer
                     more tailored and effective treatment options.</p>
                 <p> MeOmics aims to predict the most
                     effective medications for their specific needs. This personalised approach has the potential to:
-                <p> Reduce trial-and-error with medication: Finding the right medication faster can lead to quicker symptom relief and improved quality of life.
-                <p> Minimize side effects: Matching the right medication to a patient's biology can potentially reduce
+                <br> Reduce trial-and-error with medication: Finding the right medication faster can lead to quicker symptom relief and improved quality of life.
+                <br> Minimize side effects: Matching the right medication to a patient's biology can potentially reduce
                     the risk of unwanted side effects.
-                <p> Empower patients: Being actively involved in a personalised treatment plan can lead to a greater
+                <br> Empower patients: Being actively involved in a personalised treatment plan can lead to a greater
                     sense of control and hope for recovery.
 
                 </p>
