--- a/index.html
+++ b/index.html
@@ -94,21 +94,17 @@
     <main>
         <div class="meomics-is-a">
             <p>
-
-                MeOmics is a groundbreaking biotech startup poised to revolutionise
-                mental healthcare. By harnessing the power of stem cells, we are
-                building intricate "brains on a chip" that become "patient populations on a plate" 
-                that hold the key to unlocking the future of personalised medicine. This innovative 
-                technology will allow us to peer into the very foundation of mental health
-                conditions, like schizophrenia, at a cellular level.
-
-
+                <b>Transforming Psychiatry Through Precision Neuroscience</b>
             </p>
-            <p>This deeper understanding paves the way for developing targeted treatments,
-                tailored to the unique needs of each patient. By supporting Meomics, you are
-                not just supporting a company, you are joining a movement to rewrite the
-                narrative of mental health – a story filled with hope, empowerment,
-                and the potential for groundbreaking breakthroughs.
+            <p>
+                MeOmics is pioneering a new era in psychiatric drug discovery with a first-in-class, 
+                AI-enhanced, human neuronal cell platform designed to unlock patient-specific 
+                insights and radically improve treatment success.
+            </p>
+            <p>
+                We combine cutting-edge stem cell biology, advanced electrophysiology, and machine 
+                learning to build predictive biomarkers that stratify patient response at the earliest 
+                stages of drug development, bringing precision medicine to psychiatry for the first time.
             </p>
         </div>
 
