--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <b>Transforming Psychiatry Through Precision Neuroscience</b>
             </p>
             <p>
-                MeOmics is pioneering a new era in psychiatric drug discovery with a first-in-class, 
+                <b>MeOmics is pioneering a new era in psychiatric drug discovery</b> with a first-in-class, 
                 AI-enhanced, human neuronal cell platform designed to unlock patient-specific 
                 insights and radically improve treatment success.
             </p>
@@ -105,6 +105,47 @@
                 We combine cutting-edge stem cell biology, advanced electrophysiology, and machine 
                 learning to build predictive biomarkers that stratify patient response at the earliest 
                 stages of drug development, bringing precision medicine to psychiatry for the first time.
+            </p>
+            <p>
+                <b>Why Psychiatry Needs a New Approach</b>
+            </p>
+            <p>
+                Psychiatric illness remains one of the most underserved areas in medicine. High clinical 
+                trial failure rates, a lack of translatable models, and poor stratification of patients 
+                have held back innovation for decades. MeOmics addresses this challenge head-on.
+            </p>
+            <p>
+                <b>Why Psychiatry Needs a New Approach</b>
+            </p>
+            <p>
+                Psychiatric illness remains one of the most underserved areas in medicine. High clinical 
+                trial failure rates, a lack of translatable models, and poor stratification of patients 
+                have held back innovation for decades. MeOmics addresses this challenge head-on.
+            </p>
+            <p>
+                <b>Our Platform</b>
+            </p>
+            <p>
+                We use patient-derived iPSC neurons and multi-electrode array technology to profile 
+                functional neuronal activity and identify biologically distinct responder groups. By pairing 
+                this with proprietary AI analytics, we uncover patterns linked to symptom severity, clinical 
+                subtype, and drug response, generating powerful decision-making tools for preclinical discovery teams.
+            </p>
+            <p>
+                <b>Built with Real-World Data</b>
+            </p>
+            <p>
+                Developed in collaboration with leading mental healthcare institutions, our platform is anchored in real 
+                patient biology. We’ve already stratified neuronal phenotypes from a diverse cohort of individuals 
+                with psychosis, and validated links between cell activity and clinical outcomes — a foundational step 
+                towards more targeted, effective therapies.
+            </p>
+            <p>
+                <b>Partner with Us</b>
+            </p>
+            <p>
+                Whether you're a biotech innovator with a novel mechanism or a pharma team looking to de-risk clinical 
+                entry, please get in touch to see how we can work together. 
             </p>
         </div>
 
