--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
             <p>
                 <b>MeOmics is pioneering a new era in psychiatric drug discovery</b> with a first-in-class, 
                 AI-enhanced, human neuronal cell platform designed to unlock patient-specific 
-                insights and radically improve treatment success.
-            </p>
-            <p>
+                insights and radically improve treatment success.<br>
                 We combine cutting-edge stem cell biology, advanced electrophysiology, and machine 
                 learning to build predictive biomarkers that stratify patient response at the earliest 
                 stages of drug development, bringing precision medicine to psychiatry for the first time.
