--- a/schizophrenia.html
+++ b/schizophrenia.html
@@ -86,6 +86,13 @@
 
             <div class="content">
 
+                <p>Approximately 340 million people globally suffer with a severe mental illness, to include Schizophrenia, 
+                    Bipolar Disorder and Major Depressive Disorder. It is estimated that 30% of these people do not respond 
+                    to the primary treatments available – they are treatment resistant.  The first focus of our platform is 
+                    on Schizophrenia, identifying biomarkers for patients that are unlikely to respond to traditional 
+                    antipsychotics and providing a platform to support novel treatment development.
+                </p>
+
 
                 <img src="/public/1.svg" alt="img of number 1" class="numbers">
                 <h2>Schizophrenia:
@@ -93,12 +100,10 @@
                 <p>
 
                     Schizophrenia is a complex mental health condition that affects about 1 in 100 people in the UK. It
-                    can
-                    cause hallucinations (seeing or hearing things that aren't there) and delusions (fixed, false
+                    can cause hallucinations (seeing or hearing things that aren't there) and delusions (fixed, false
                     beliefs).
                     Additionally, people with schizophrenia may experience social withdrawal, difficulty concentrating,
-                    and
-                    disorganised thinking.</p>
+                    and disorganised thinking.</p>
             </div>
         </section>
 
@@ -106,14 +111,14 @@
             <div class="content">
                 <img src="/public/2.svg" alt="img of number 1" class="numbers">
                 <h2>Current Treatment Landscape</h2>
-                <p>Schizophrenia is typically treated with a combination of medication and therapy. Antipsychotic
-                    medications are the mainstay of treatment, helping to manage symptoms like hallucinations and
-                    delusions.
-                    Therapies, such as cognitive behavioural therapy (CBT), can equip individuals with coping mechanisms
-                    and
-                    improve social skills. However, finding the right medication and therapy approach can be a process
-                    of
-                    trial and error, and some people experience side effects from medications.</p>
+                <p>Schizophrenia is typically treated with a combination of medication and therapy. Antipsychotic medications 
+                    are the mainstay of treatment, helping to manage symptoms like hallucinations and delusions. Therapies, 
+                    such as cognitive behavioural therapy (CBT), can equip individuals with coping mechanisms and improve social 
+                    skills. However, finding the right medication and therapy approach can be an extremely long process of trial 
+                    and error, and some people experience severe side effects from medications. People with treatment resistant 
+                    schizophrenia will have trialled at least 2 antipsychotics before being trialled on clozapine and may 
+                    experience multiple hospitalisations due to inadequate or inappropriate treatments.
+                </p>
             </div>
             <div class="image">
                 <img src="/public/schizo2.svg" alt="positve message about mental health">
@@ -128,22 +133,13 @@
             </div>
             <div class="content">
                 <img src="/public/3.svg" alt="img of number 1" class="numbers">
-                <h2>MeOmics: A Personalised
-                    Approach to Treatment</h2>
-                <p> MeOmics is revolutionizing the future of schizophrenia treatment by providing a more personalised
-                    approach. We analyze each patient's unique biology, focusing on several key areas:
-                <br> Cellular Activity: We examine how an individual's nerve cells respond to various stimuli.
-                <br> Genetics: We study their genetic makeup to identify potential risk factors.
-                    By integrating this information with a patient's medical history, MeOmics can offer
-                    more tailored and effective treatment options.</p>
-                <p> MeOmics aims to predict the most
-                    effective medications for their specific needs. This personalised approach has the potential to:
-                <br> Reduce trial-and-error with medication: Finding the right medication faster can lead to quicker symptom relief and improved quality of life.
-                <br> Minimize side effects: Matching the right medication to a patient's biology can potentially reduce
-                    the risk of unwanted side effects.
-                <br> Empower patients: Being actively involved in a personalised treatment plan can lead to a greater
-                    sense of control and hope for recovery.
-
+                <h2>MeOmics: A Precision Approach to Treatment</h2>
+                <p>
+                    The MeOmics platform uses neuronal cell signalling data combined with genetic and clinical data 
+                    to identify novel biotypes of schizophrenia and associated underlying biological mechanisms and 
+                    patient biomarkers. This data can be used to target drug discovery and development and identify 
+                    the likely ‘biotype’ of a newly presenting patient in order to inform clinical decision making to 
+                    get the right drug to the right patient as quickly as possible.
                 </p>
             </div>
         </section>
