--- a/schizophrenia.html
+++ b/schizophrenia.html
@@ -79,13 +79,6 @@
 
     </header>
     <main>
-        
-             <p>Approximately 340 million people globally suffer with a severe mental illness, to include Schizophrenia, 
-                    Bipolar Disorder and Major Depressive Disorder. It is estimated that 30% of these people do not respond 
-                    to the primary treatments available – they are treatment resistant.  The first focus of our platform is 
-                    on Schizophrenia, identifying biomarkers for patients that are unlikely to respond to traditional 
-                    antipsychotics and providing a platform to support novel treatment development.
-                </p>
 
         <section class="container1">
             <div class="image">
@@ -93,6 +86,13 @@
             </div>
 
             <div class="content">
+                
+             <p>Approximately 340 million people globally suffer with a severe mental illness, to include Schizophrenia, 
+                    Bipolar Disorder and Major Depressive Disorder. It is estimated that 30% of these people do not respond 
+                    to the primary treatments available – they are treatment resistant.  The first focus of our platform is 
+                    on Schizophrenia, identifying biomarkers for patients that are unlikely to respond to traditional 
+                    antipsychotics and providing a platform to support novel treatment development.<br><br>
+                </p>
 
                 <img src="/public/1.svg" alt="img of number 1" class="numbers">
                 <h2>Schizophrenia:
