--- a/team.html
+++ b/team.html
@@ -82,35 +82,34 @@
             <img src="/public/Team.svg" alt="Team Picture">
         </section>
 <h1>Our Team</h1>
+        <p>
+            <b>Driven by Science. United by Purpose</b>
+        </p>
+        <p>
+            At MeOmics, we are a team of neuroscientists, data scientists, and biotech innovators committed to transforming mental health treatment. We 
+            bring deep expertise across neuronal cell biology, genetics, AI, and translational psychiatry — all focused on solving one of medicine’s 
+            most urgent challenges: how to predict who will respond to psychiatric treatment.
+        </p>
         <section class="team-members">
             <div class="team-member">
                 <div class="member-info">
-                    <img src="/public/adrian.png" alt="Team Member 1">
-                    <h2>Professor Adrian Harwood</h2>
-                    <h3>Chief Technology Officer</h3>
-                    <p>Leading Expert in Neuronal Cell Biology & Neuropsychopharmacology</p>
-                    <a href="https://profiles.cardiff.ac.uk/staff/harwoodaj">Contact Info</a>
+                    <img src="/public/lucy.png" alt="Team Member 2">
+                    <h2>Dr Lucy Sykes</h2>
+                    <h3>CEO</h3>
+                    <p>Experienced biotech executive in drug discovery for genetic disease. Expert in Cell & 
+                        Molecular Biology and translational science</p>
+                    <a href="https://www.linkedin.com/in/lucy-sykes-75b23637">Contact Info</a>
                 </div>
             </div>
 
             <!-- Repeat this for each team member -->
             <div class="team-member">
                 <div class="member-info">
-                    <img src="/public/lucy.png" alt="Team Member 2">
-                    <h2>Dr Lucy Sykes</h2>
-                    <h3>Special Advisor (Chief Scientific Officer)</h3>
-                    <p>Expert in Cell & Molecular Biology & Biotech Business Models</p>
-                    <a href="https://www.linkedin.com/in/lucy-sykes-75b23637">Contact Info</a>
-                </div>
-            </div>
-
-            <div class="team-member">
-                <div class="member-info">
-                    <img src="/public/jeremy.png" alt="Team Member 3">
-                    <h2>Professor Jeremy Hall</h2>
-                    <h3>Chief Medical Officer</h3>
-                    <p>Leading Expert in Psychiatric Phenotypes & Biomarkers</p>
-                    <a href="https://profiles.cardiff.ac.uk/staff/hallj10">Contact Info</a>
+                    <img src="/public/Alasdair Pettigrew.jpg" alt="Team Member 5">
+                    <h2>Alasdair Pettigrew</h2>
+                    <h3>COO</h3>
+                    <p>Technology expert with over 30 years-experience in scale-up & commercialisation</p>
+                    <a href="https://www.linkedin.com/in/alasdairpettigrew/">Contact Info</a>
                 </div>
             </div>
 
@@ -118,29 +117,9 @@
                 <div class="member-info">
                     <img src="/public/alicia.png" alt="Team Member 4">
                     <h2>Alicia Campbell</h2>
-                    <h3>Cell Biologist</h3>
-                    <p>Expert in Upscaling Stem Cells & Process Development</p>
+                    <h3>Head of Lab</h3>
+                    <p>Experienced Stem Cell expert for upscaling, advanced cell therapies and ISO accredited labs</p>
                     <a href="https://www.linkedin.com/in/alicia-campbell-b8515161/">Contact Info</a>
-                </div>
-            </div>
-
-            <div class="team-member">
-                <div class="member-info">
-                    <img src="/public/Alasdair Pettigrew.jpg" alt="Team Member 5">
-                    <h2>Alasdair Pettigrew</h2>
-                    <h3>Chief Executive Officer</h3>
-                    <p>Entrepreneur & Technology Commercialisation Expert</p>
-                    <a href="https://www.linkedin.com/in/alasdairpettigrew/">Contact Info</a>
-                </div>
-            </div>
-
-            <div class="team-member">
-                <div class="member-info">
-                    <img src="/public/james.png" alt="Team Member 6">
-                    <h2>Professor James Walters</h2>
-                    <h3>Special Advisor</h3>
-                    <p>Expert in Neuropsychiatric Genetics & Genomics</p>
-                    <a href="https://profiles.cardiff.ac.uk/staff/waltersjt">Contact Info</a>
                 </div>
             </div>
 
